[tool.poetry]
name = "volcano-cooking"
version = "0.1.0"
description = "Make some volcanoes and simulate them in CESM2"
authors = ["engeir <eirroleng@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.1"
xarray = "^0.19.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
isort = "^5.9.3"
mypy = "^0.910"
flake8 = "^3.9.2"
pre-commit = "^2.14.0"
pre-commit-hooks = "^4.0.1"
pyupgrade = "^2.23.3"
darglint = "^1.8.0"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
