[tool.poetry]
name = "volcano-cooking"
version = "0.1.0"
description = "Make some volcanoes and simulate them in CESM2"
authors = ["engeir <eirroleng@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.scripts]
volcano-cooking = "volcano_cooking.__main__:main"

[tool.poetry.dependencies]
python = ">3.9,<3.10"
numpy = "^1.21.1"
xarray = "^0.19.0"
scipy = "^1.7.1"
netCDF4 = "^1.5.7"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
isort = "^5.9.3"
mypy = "^0.910"
flake8 = "^3.9.2"
pre-commit = "^2.14.0"
pre-commit-hooks = "^4.0.1"
pyupgrade = "^2.23.3"
darglint = "^1.8.0"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
